Fix PODCAT-699 issue: Fix Table View Horizontal Line Spacing

--- a/src/pages/searchCatalogPage/searchCatalogPage.css
+++ b/src/pages/searchCatalogPage/searchCatalogPage.css
@@ -104,8 +104,8 @@
 }
 
 .contentPagingArea {
-  position: absolute;
-  right: 0;
+  position: relative;
+  left: 10px;
 }
 
 .space50 {
